2009-01-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTextStorage.m: Change to use new GC finalization API.

2009-01-12 10:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: More documentation.

2009-01-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-initWithCoder:): Replace the key
	equivalent when it was set wrongly by Gorm.
	Patch by Wolfgang Lux  <wolfgang.lux@gmail.com>.

2009-01-11 20:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Reorganization and simplification of
	nib loading logic in NSIBObjectData.  Also documentation for 
	NSIBObjectData and NSClassSwapper.

2009-01-10 15:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSToolbarItem.m: Added _sendAction: method to send
	the action with the NSToolbarItem instance as the sender
	when the toolbar item is represented by an NSMenuItem.  

2009-01-09 23:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenu.m: Correction to previous change.  Update when
	setAutoenableItems: value is changed.  Altered update to 
	enable menu items when autoenable is not being performed.

2009-01-09 22:53-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuItemCell.m: encode menu item in encodeWithCoder: 
	method.
	* Source/NSMenu.m: Add code to handle NSNoAutoenable
	* Source/NSPopUpButtonCell.m: Decode/encode selected index
	* Source/NSPrintInfo.m: Set orientation after the page size is 
	known, since it has no effect when done earlier.

2009-01-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSColorWell.m: Fix bug #25278 after checking behavior on MacOS

2009-01-09 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWindow+Toolbar.h,
	* Source/NSWindow+Toolbar.m: Remove these file and move all code ...
	* Headers/AppKit/NSWindow.h,
	* Source/NSWindow.m: ... to here.
	* Source/NSToolbarFrameworkPrivate.h,
	* Headers/AppKit/AppKit.h,